platform/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eurotransit-keycloak-auth
  namespace: eurotransit
spec:
  ingressClassName: traefik
  rules:
    - host: eurotransit-demo2.spaincentral.cloudapp.azure.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: eurotransit-keycloak-service
                port:
                  name: http
